Closed Bug 96761 Opened 25 years ago Closed 24 years ago

426 error on RETR?

Categories

(Core Graveyard :: Networking: FTP, defect)

x86
Windows 98
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.5

People

(Reporter: xyzzy, Assigned: bbaetz)

References

()

Details

(Keywords: testcase)

Attachments

(1 file)

Am experiencing this on build 2001082109 under Win98: Procedure: 1) Go to Sun's Java home page (above) 2) Select "Products and APIs" (left) 3) Under "Product Groups", select "Java 2 Platform, Standard Edition (J2SE)" 4) Select "Java 2 SDK, Standard Edition, v 1.3.1 (SDK)" 5) Select "Microsoft Windows" 6) Click "continue" button 7) Accept License Agreement 8) Select "FTP download for US West IV" button Actual results: Alert window pops up saying "/pub/j2sdk/1.3.1/f198267/j2sdk-1_3_1-win.exe: Not a directory." Expected results: Downloads the file via ftp. Works in Netscape 4.7. Worked in the last build I had, 2001080603.
not detecting 426 error. If any error happens during RETR we try CWD blindly. This results in a bad alert. If we find that we drop our data connection, we should abort the connection (eventually we should try to reestablish it) (209.114.91.35:21 them, 10.4.250.18 me) filter: ip and ( port ftp ) #### T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 220 sunwww4.ca1.breakaway.com FTP server (Version wu-2.6.1(2) Thu Jul 12 12:21:17 PDT 2001) ready... # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] USER anonymous.. ## T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 331 Guest login ok, send your complete e-mail address as password... # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] PASS mozilla@.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 230 Guest login ok, access restrictions apply... # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] SYST.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 215 UNIX Type: L8.. # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] TYPE I.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 200 Type set to I... # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] PASV.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 227 Entering Passive Mode (209,114,91,35,63,105).. # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] SIZE /pub/j2s ## T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] dk/1.3.1/f198267/j2sdk-1_3_1-win.exe.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 213 34440521.. # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] RETR /pub/j2sdk/1.3.1/f198 ## T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] 267/j2sdk-1_3_1-win.exe.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 150 Opening BINARY mode data connection for /pub/j2sdk/1.3.1/f198267/j 2sdk-1_3_1-win.exe (34440521 bytes)... ## T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 426 Data connection: Connection reset by peer... # T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] CWD /pub/j2sdk/1.3.1/f198267/j2sdk-1_3_ ## T 10.4.250.18:1214 -> 209.114.91.35:21 [AP] 1-win.exe.. # T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 550 /pub/j2sdk/1.3.1/f198267/j2sdk-1_3_1-win.exe: Not a directory... #### T 209.114.91.35:21 -> 10.4.250.18:1214 [AP] 221 You could at least say goodbye... ####
Summary: Alert when getting Java SDK → not detecting 426 error
still don't know why the connection is being dropped in mozilla... need to investigate further, but I think the last patch is a good one.
r/sr=darin
r=gagan
a=asa on behalf of drivers.
Checking in nsFtpConnectionThread.cpp; /cvsroot/mozilla/netwerk/protocol/ftp/src/nsFtpConnectionThread.cpp,v <-- nsFtpConnectionThread.cpp new revision: 1.190; previous revision: 1.189 Now we get the right alert. Why we get this alert in the first place, needs to be investigated further...
Summary: not detecting 426 error → 426 error on RETR?
Target Milestone: --- → mozilla0.9.5
reassigning to bbaetz@cs.mcgill.ca.
Assignee: dougt → bbaetz
this has been fixed a while back. qa please verify.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
dougt, did you figure out why the connection was being dropped?
VERIFIED: Mozilla 1.0, RC1
Status: RESOLVED → VERIFIED
Keywords: testcase
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: