fixes bug 96761 - prevents connection problems detected during RETR from continuing into CWD state. r=gagan. sr=darin. a=asa